crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__parse_if_expr.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
if 1 == 1 then 42 end

EXPRESSION:
if (1 == 1) then do
<stmt>
end  @ (L1, C0:2)
