crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__parse_literal-2.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
0x123

EXPRESSION:
291 @ (L1, C0:5)
