crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__parse_literal-3.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
3.14

EXPRESSION:
3.14 @ (L1, C0:4)
