crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__parse_literal-4.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
"Hello, world!"

EXPRESSION:
"Hello, world!" @ (L1, C0:15)
