crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__parse_literal.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
42

EXPRESSION:
42 @ (L1, C0:2)
